fix:repair get slider captcha info incorrect question
