# server/docs/swagger.json
@@ -86,7 +86,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.CaptchaInfo"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Data"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.CaptchaInfo"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -1574,7 +1586,8 @@
                 "jigsaw_image_base_64": {},
                 "original_image_base_64": {},
                 "secret_key": {},
-                "token": {}
+                "token": {},
+                "word_list": {}
             }
         },
         "response.Create": {
